--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-4.04MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-605.4KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-407.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-177.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.26MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.26MB/s(Youtube:不良林), server: upp-26d.top, port: 443, type: trojan, password: s6rIg1Mkke73fwZU, sni: upp-26d.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.39MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc.jp.98848.xyz, port: 39813, type: vmess, uuid: fa3f6466-a3be-4e83-9f0e-f35680b2c79d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bai-piao-wang-zhe-iplc.jp.98848.xyz}}
-  - {name: 🇺🇸 美国-9.50MB/s(Youtube:不良林), server: jpsv.project4gyuna.pw, port: 80, type: vmess, uuid: d1d4ad51-ad11-4648-ab28-08bc20db295a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /project4gyuna.pw, ws-headers: {Host: jpsv.project4gyuna.pw}}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.49MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.72MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.24MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.62MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇩🇪 德国-975.5KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-605.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-407.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-177.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.92MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.72MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.24MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.62MB/s(Youtube:不良林)
+      - 🇩🇪 德国-975.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
